[package]
name = "ProjectOmegaDwarf"
version = "0.1.0"
authors = ["Robert <rlee0570@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.2"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json"]